Update GitHub Actions workflow for branch commits

--- a/.github/workflows/Clientes.yml
+++ b/.github/workflows/Clientes.yml
@@ -152,20 +152,67 @@ jobs:
             raise SystemExit("ERROR: Acción inválida.")
           PY
 
-      - name: Commit cambios (si aplica)
+      - name: Commit cambios en rama (no main)
+        id: commit_step
         run: |
+          # Configuración de git para el bot
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
+
+          # Crear rama única para el cambio (evita colisiones)
+          BRANCH="actions/${{ inputs.accion }}-${{ github.run_id }}"
+          echo "BRANCH=$BRANCH" >> $GITHUB_OUTPUT
+
+          git checkout -b "$BRANCH"
+
+          # Agregar solo archivos que existan
           git add data/clientes || true
-          git add consulta_cliente.txt || true
-          if git diff --cached --quiet; then
-            echo "No hay cambios para commit."
-          else
-            git commit -m "Acción GitHub Actions: ${{ inputs.accion }} (${{ inputs.nombre }})"
-            git push
+          if [ -f "consulta_cliente.txt" ]; then
+            git add consulta_cliente.txt
           fi
 
-      - name: Subir evidencia de consulta (si existe)
+          # Si no hay cambios, terminar
+          if git diff --cached --quiet; then
+            echo "NO_CHANGES=true" >> $GITHUB_OUTPUT
+            echo "No hay cambios para commit."
+            exit 0
+          fi
+
+          git commit -m "Acción GitHub Actions: ${{ inputs.accion }} (${{ inputs.nombre }})"
+          git push -u origin "$BRANCH"
+          echo "NO_CHANGES=false" >> $GITHUB_OUTPUT
+
+      - name: Crear Pull Request automático hacia main
+        if: ${{ steps.commit_step.outputs.NO_CHANGES == 'false' }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const branch = "${{ steps.commit_step.outputs.BRANCH }}";
+            const accion = "${{ inputs.accion }}";
+            const nombre = "${{ inputs.nombre }}";
+
+            const title = `Acción automática: ${accion} (${nombre})`;
+            const body = [
+              `Este PR fue generado automáticamente por GitHub Actions.`,
+              ``,
+              `**Acción:** ${accion}`,
+              `**Cliente:** ${nombre}`,
+              ``,
+              `Cumple el flujo DevOps: cambios a main solo mediante Pull Request.`
+            ].join("\n");
+
+            const pr = await github.rest.pulls.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title,
+              head: branch,
+              base: "main",
+              body
+            });
+
+            core.notice(`Pull Request creado: #${pr.data.number}`);
+
+      - name: Subir evidencia de consulta (artifact)
         if: ${{ inputs.accion == 'consultar_cliente' }}
         uses: actions/upload-artifact@v4
         with:
